Splitting test and train set

--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -26,14 +26,12 @@
         "import os\n",
         "import pandas as pd\n",
         "import sklearn as sk\n",
-        "\n",
-        "\n",
-        "\n"
+        "import numpy as np\n"
       ],
       "metadata": {
         "id": "f-5Aw7sQpsDL"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -49,14 +47,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "CiDn2Sk-VWqE",
         "outputId": "77e3c87d-4ec9-4756-b8ce-2f1254fe5e8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true
+        }
       },
       "outputs": [
         {
@@ -229,13 +226,107 @@
     {
       "cell_type": "code",
       "source": [
-        "# Initial split"
+        "# Initial split\n",
+        "\n",
+        "# packages \n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import KFold\n",
+        "\n",
+        "# Defining amount of diseased('1') patients\n",
+        "print(f'Amount of diseased patients: {sum(data[\"label\"])}')\n",
+        "\n",
+        "#splitting the whole data set in a train and test set\n",
+        "def train_test_split(x, y, train_size = 0.8, random_state = 0):\n",
+        "  return x_train, x_test, y_train, y_test \n",
+        "\n",
+        "col = \"label\"\n",
+        "x_train, x_test, y_train, y_test = train_test_split(data.loc[:, data.columns !=col], data.loc[:, \"label\"].values)\n",
+        "print(x_train)\n",
+        "\n",
+        "#splitting the train set in a train and validation set\n",
+        "kf = KFold(n_splits=2)\n",
+        "kf.get_n_splits(x_train)"
       ],
       "metadata": {
-        "id": "nIf-5Y4zm3ND"
+        "id": "nIf-5Y4zm3ND",
+        "outputId": "42eceec6-77e5-4ecd-d849-f33cd9cca81e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Amount of diseased patients: 146\n",
+            "             0_0          0_1         0_2         0_3         0_4         0_5  \\\n",
+            "593     8.358655    20.946035    9.784189   17.274924   11.670394   35.207370   \n",
+            "780  2244.050479  1067.521450  184.271101   71.748932   47.949082   27.896622   \n",
+            "71   1072.494116    82.493852   46.458215   87.448854  108.303842  110.689626   \n",
+            "49      0.835017     6.575501   12.352972   35.881337   20.712190   49.123780   \n",
+            "267     3.658617     4.205258    6.057089    5.468345    9.699800    9.456077   \n",
+            "..           ...          ...         ...         ...         ...         ...   \n",
+            "763    34.147492    50.031748   81.418305   91.320333   63.807030   62.255815   \n",
+            "192     5.856814     1.322058    4.907688    3.574215    3.317540    7.837192   \n",
+            "629    15.178521     0.769534   27.474748   22.930420   25.603870   26.328295   \n",
+            "559  2920.585238   485.861964   82.289741  124.215917   16.849693   52.066079   \n",
+            "684   372.355214    43.892484   68.014305   52.821319   54.022098   24.141568   \n",
+            "\n",
+            "           0_6         0_7        0_8        0_9  ...    11_740    11_741  \\\n",
+            "593  80.446113   36.204789  10.360566   9.475575  ...  0.160780  0.071363   \n",
+            "780  23.214930   24.722041  36.941295  17.491039  ...  0.486008  0.416314   \n",
+            "71   64.892998   64.876369  53.307615  49.530203  ...  0.208585  0.083196   \n",
+            "49   82.917623   58.757996   8.723075  11.815731  ...  0.086927  0.139918   \n",
+            "267  59.615478    7.589534   8.290047   5.690543  ...  0.190578  0.074899   \n",
+            "..         ...         ...        ...        ...  ...       ...       ...   \n",
+            "763  48.873840   42.619154  53.946560  25.533055  ...  0.126525  0.233981   \n",
+            "192  18.698402  427.113849  16.202003  23.821725  ...  0.126994  0.172944   \n",
+            "629   5.332596    4.026124  32.922172  40.647743  ...  0.666720  0.643547   \n",
+            "559  11.875205   55.925453  30.527755  10.893920  ...  0.241784  0.117467   \n",
+            "684  32.630470   37.321452  23.243950  12.432414  ...  0.714678  0.654316   \n",
+            "\n",
+            "       11_742    11_743    11_744    11_745    11_746    11_747    11_748  \\\n",
+            "593  0.106118  0.181534  0.182841  0.186981  0.072949  0.201616  0.093161   \n",
+            "780  0.424816  0.480354  0.375614  0.334241  0.352564  0.424363  0.552823   \n",
+            "71   0.168840  0.190004  0.192120  0.224800  0.174724  0.287928  0.220868   \n",
+            "49   0.074866  0.211045  0.141122  0.117961  0.165584  0.195522  0.194389   \n",
+            "267  0.062743  0.157751  0.151638  0.115565  0.110373  0.077148  0.063103   \n",
+            "..        ...       ...       ...       ...       ...       ...       ...   \n",
+            "763  0.124837  0.097386  0.099451  0.150217  0.148279  0.014260  0.080768   \n",
+            "192  0.238619  0.043772  0.153070  0.133455  0.285745  0.061651  0.079124   \n",
+            "629  0.558958  0.528746  0.669019  0.633855  0.542674  0.646325  0.645241   \n",
+            "559  0.289397  0.128979  0.225011  0.293166  0.262227  0.209920  0.254522   \n",
+            "684  0.632995  0.596525  0.544298  0.686030  0.545682  0.560156  0.667340   \n",
+            "\n",
+            "       11_749  \n",
+            "593  0.051656  \n",
+            "780  0.482239  \n",
+            "71   0.250343  \n",
+            "49   0.064589  \n",
+            "267  0.028845  \n",
+            "..        ...  \n",
+            "763  0.078888  \n",
+            "192  0.336837  \n",
+            "629  0.669634  \n",
+            "559  0.207674  \n",
+            "684  0.619255  \n",
+            "\n",
+            "[661 rows x 9000 columns]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "markdown",
