Checking for missing data update

--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -26,14 +26,13 @@
         "import os\n",
         "import pandas as pd\n",
         "import sklearn as sk\n",
-        "\n",
-        "\n",
+        "import numpy as np\n",
         "\n"
       ],
       "metadata": {
         "id": "f-5Aw7sQpsDL"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -49,14 +48,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "CiDn2Sk-VWqE",
-        "outputId": "77e3c87d-4ec9-4756-b8ce-2f1254fe5e8b",
+        "outputId": "df04fed6-5dfc-4ca4-ee45-8b8111272f17",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true
+        }
       },
       "outputs": [
         {
@@ -64,12 +62,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'TM10007_ML_ECG_group4'...\n",
-            "remote: Enumerating objects: 147, done.\u001b[K\n",
-            "remote: Counting objects: 100% (65/65), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (43/43), done.\u001b[K\n",
-            "remote: Total 147 (delta 38), reused 22 (delta 22), pack-reused 82\u001b[K\n",
-            "Receiving objects: 100% (147/147), 67.95 MiB | 30.83 MiB/s, done.\n",
-            "Resolving deltas: 100% (62/62), done.\n",
+            "remote: Enumerating objects: 159, done.\u001b[K\n",
+            "remote: Counting objects: 100% (77/77), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (41/41), done.\u001b[K\n",
+            "remote: Total 159 (delta 47), reused 54 (delta 36), pack-reused 82\u001b[K\n",
+            "Receiving objects: 100% (159/159), 67.95 MiB | 31.77 MiB/s, done.\n",
+            "Resolving deltas: 100% (71/71), done.\n",
             "The number of samples: 827\n",
             "The number of columns: 9001\n",
             "            0_0         0_1         0_2        0_3        0_4         0_5  \\\n",
@@ -183,7 +181,7 @@
         "# Columns\n",
         "columnswithzeros = []\n",
         "for (colname, colval) in data.iteritems():\n",
-        "  if (colval==0).all() == True:\n",
+        "  if (colval.to_numpy()==0).all() == True:\n",
         "    print(f'All values are zero in column {colname}')\n",
         "    columnswithzeros.append(colname)\n",
         "\n",
@@ -193,7 +191,7 @@
         "# Rows\n",
         "rowswithzeros = []\n",
         "for (index, rowval) in data.iterrows():\n",
-        "  if (rowval==0).all() == True: \n",
+        "  if (rowval.to_numpy()==0).all() == True: \n",
         "    print(f'All values are zero in row {index}')\n",
         "    rowswithzeros.append(index)\n",
         "\n",
@@ -203,12 +201,12 @@
       "metadata": {
         "id": "nZLKTGMpmxOc",
         "collapsed": true,
-        "outputId": "10a21d48-f0d1-4acc-debb-338ee112a342",
+        "outputId": "08f09356-8a55-49bb-c36b-34feeed291dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,18 +221,50 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cleaning dataset"
+        "# Test dataset for zero's in featurs\n",
+        "indexofzeros=[]\n",
+        "\n",
+        "for (index, rowval) in data.iterrows():\n",
+        "  row = rowval.to_numpy()[:-1]\n",
+        "  if (row==0).any() == True: \n",
+        "    number_of_zeros = 0\n",
+        "    for i in range(len(row)):\n",
+        "      if row[i] == 0:\n",
+        "        number_of_zeros += 1\n",
+        "    indexofzeros.append({\"patient number\": index, \"index\": number_of_zeros})\n",
+        "      \n",
+        "  # else:\n",
+        "  #   print(f'{colname} contains no zero')\n",
+        "\n",
+        "print(indexofzeros)\n",
+        "print(len(indexofzeros))\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "T-mrfMKCm1iX"
+        "id": "T-mrfMKCm1iX",
+        "collapsed": true,
+        "outputId": "864b6e17-8a75-4bc4-c4fa-5e34f90573a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'patient number': 177, 'index': 750}, {'patient number': 251, 'index': 750}, {'patient number': 269, 'index': 750}, {'patient number': 321, 'index': 750}, {'patient number': 323, 'index': 750}, {'patient number': 385, 'index': 750}, {'patient number': 434, 'index': 750}, {'patient number': 446, 'index': 750}, {'patient number': 537, 'index': 750}, {'patient number': 542, 'index': 750}, {'patient number': 575, 'index': 750}, {'patient number': 601, 'index': 750}, {'patient number': 784, 'index': 750}, {'patient number': 790, 'index': 750}]\n",
+            "14\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Visualisation of the datasset"
+        "Categorisation of dataset"
       ],
       "metadata": {
         "id": "OaN6z_VynlYI"
@@ -271,17 +301,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# Visualisation of feature space\n"
-      ],
-      "metadata": {
-        "id": "r6vBeZo2nnlX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## 2. Creating the experimental setup\n",
@@ -314,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
