put defs back into notebook

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -31,17 +31,7 @@
         "id": "-NE_fTbKGe5z",
         "outputId": "eec4b482-f998-4f1b-e736-3b9db9970032"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The number of samples: 115\n",
-            "The number of columns: 494\n",
-            "<class 'pandas.core.frame.DataFrame'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# import packages\n",
         "import os\n",
@@ -63,14 +53,39 @@
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "\n",
-        "# import functions\n",
-        "from worclipo.load_data import load_data\n",
-        "from worclipo.split_set import split_set\n",
+        "from worclipo.load_data import load_data"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# function to split the dataset into train and test\n",
+        "def split_set(X,y,test_size):\n",
         "\n",
-        "data = load_data()\n",
-        "print(f'The number of samples: {len(data.index)}')\n",
-        "print(f'The number of columns: {len(data.columns)}')\n",
-        "print(type(data))\n"
+        "    if os.path.exists('./TEST_set.csv'):\n",
+        "        split_action = print('TEST_set.csv already exists')\n",
+        "    else:\n",
+        "        split_action = print('TEST_set.csv does not exist, generating new test and training sets')\n",
+        "        X_train_csv, X_test_csv, y_train_csv, y_test_csv = train_test_split(X, y, test_size=test_size, random_state=10)\n",
+        "\n",
+        "        TESTSET = X_test_csv.merge(y_test_csv, left_index=True, right_index=True)\n",
+        "        TESTSET.to_csv('TEST_set.csv')\n",
+        "\n",
+        "        TRAINSET = X_train_csv.merge(y_train_csv, left_index=True, right_index=True)\n",
+        "        TRAINSET.to_csv('TRAIN_set.csv')\n",
+        "        return split_action\n",
+        "    "
       ]
     },
     {
@@ -83,19 +98,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "The number of samples: 115\n",
+            "The number of columns: 494\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
             "['liposarcoma', 'lipoma']\n",
             "Categories (2, object): ['liposarcoma' < 'lipoma']\n"
           ]
         }
       ],
       "source": [
+        "data = load_data()\n",
+        "print(f'The number of samples: {len(data.index)}')\n",
+        "print(f'The number of columns: {len(data.columns)}')\n",
+        "print(type(data))\n",
+        "\n",
         "# change lipoma = 1 and liposarcoma = 0 and encode labels\n",
         "group_names = list(set(data.label))\n",
         "data.loc[data['label'] == 'lipoma', 'label'] = 1\n",
@@ -113,15 +136,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TEST_set.csv already exists\n",
-            "None\n"
+            "TEST_set.csv already exists\n"
           ]
         }
       ],
@@ -140,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -148,7 +170,10 @@
           "output_type": "stream",
           "text": [
             "['liposarcoma', 'lipoma']\n",
-            "Categories (2, object): ['liposarcoma' < 'lipoma']\n"
+            "Categories (2, object): ['liposarcoma' < 'lipoma']\n",
+            "All values are numerical.\n",
+            "Size before removal zero variances:  (56, 493)\n",
+            "Size after removal zero variance:  (56, 474)\n"
           ]
         }
       ],
@@ -197,24 +222,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "rfc               precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.56      0.91      0.69        11\n",
-            "           1       0.83      0.38      0.53        13\n",
-            "\n",
-            "    accuracy                           0.62        24\n",
-            "   macro avg       0.69      0.65      0.61        24\n",
-            "weighted avg       0.71      0.62      0.60        24\n",
-            "\n",
-            "[[10  1]\n",
-            " [ 8  5]]\n"
+          "ename": "ValueError",
+          "evalue": "X has 493 features, but RandomForestClassifier is expecting 474 features as input.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[12], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m rfc \u001b[39m=\u001b[39m RandomForestClassifier(n_estimators\u001b[39m=\u001b[39m\u001b[39m500\u001b[39m)\n\u001b[0;32m      5\u001b[0m rfc\u001b[39m.\u001b[39mfit(X_train, y_train)\n\u001b[1;32m----> 6\u001b[0m pred_rfc \u001b[39m=\u001b[39m rfc\u001b[39m.\u001b[39;49mpredict(X_valid)\n\u001b[0;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mrfc\u001b[39m\u001b[39m'\u001b[39m, classification_report(y_valid, pred_rfc))\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(confusion_matrix(y_valid, pred_rfc))\n",
+            "File \u001b[1;32mc:\\ProgramData\\miniconda3\\lib\\site-packages\\sklearn\\ensemble\\_forest.py:821\u001b[0m, in \u001b[0;36mForestClassifier.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    800\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpredict\u001b[39m(\u001b[39mself\u001b[39m, X):\n\u001b[0;32m    801\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    802\u001b[0m \u001b[39m    Predict class for X.\u001b[39;00m\n\u001b[0;32m    803\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    819\u001b[0m \u001b[39m        The predicted classes.\u001b[39;00m\n\u001b[0;32m    820\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 821\u001b[0m     proba \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpredict_proba(X)\n\u001b[0;32m    823\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_outputs_ \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m    824\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_\u001b[39m.\u001b[39mtake(np\u001b[39m.\u001b[39margmax(proba, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
+            "File \u001b[1;32mc:\\ProgramData\\miniconda3\\lib\\site-packages\\sklearn\\ensemble\\_forest.py:863\u001b[0m, in \u001b[0;36mForestClassifier.predict_proba\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    861\u001b[0m check_is_fitted(\u001b[39mself\u001b[39m)\n\u001b[0;32m    862\u001b[0m \u001b[39m# Check data\u001b[39;00m\n\u001b[1;32m--> 863\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_X_predict(X)\n\u001b[0;32m    865\u001b[0m \u001b[39m# Assign chunk of trees to jobs\u001b[39;00m\n\u001b[0;32m    866\u001b[0m n_jobs, _, _ \u001b[39m=\u001b[39m _partition_estimators(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_estimators, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_jobs)\n",
+            "File \u001b[1;32mc:\\ProgramData\\miniconda3\\lib\\site-packages\\sklearn\\ensemble\\_forest.py:603\u001b[0m, in \u001b[0;36mBaseForest._validate_X_predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    600\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    601\u001b[0m \u001b[39mValidate X whenever one tries to predict, apply, predict_proba.\"\"\"\u001b[39;00m\n\u001b[0;32m    602\u001b[0m check_is_fitted(\u001b[39mself\u001b[39m)\n\u001b[1;32m--> 603\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(X, dtype\u001b[39m=\u001b[39;49mDTYPE, accept_sparse\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcsr\u001b[39;49m\u001b[39m\"\u001b[39;49m, reset\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m    604\u001b[0m \u001b[39mif\u001b[39;00m issparse(X) \u001b[39mand\u001b[39;00m (X\u001b[39m.\u001b[39mindices\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m np\u001b[39m.\u001b[39mintc \u001b[39mor\u001b[39;00m X\u001b[39m.\u001b[39mindptr\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m np\u001b[39m.\u001b[39mintc):\n\u001b[0;32m    605\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mNo support for np.int64 index based sparse matrices\u001b[39m\u001b[39m\"\u001b[39m)\n",
+            "File \u001b[1;32mc:\\ProgramData\\miniconda3\\lib\\site-packages\\sklearn\\base.py:558\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    555\u001b[0m     out \u001b[39m=\u001b[39m X, y\n\u001b[0;32m    557\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m check_params\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mensure_2d\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m--> 558\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_check_n_features(X, reset\u001b[39m=\u001b[39;49mreset)\n\u001b[0;32m    560\u001b[0m \u001b[39mreturn\u001b[39;00m out\n",
+            "File \u001b[1;32mc:\\ProgramData\\miniconda3\\lib\\site-packages\\sklearn\\base.py:359\u001b[0m, in \u001b[0;36mBaseEstimator._check_n_features\u001b[1;34m(self, X, reset)\u001b[0m\n\u001b[0;32m    356\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m    358\u001b[0m \u001b[39mif\u001b[39;00m n_features \u001b[39m!=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_features_in_:\n\u001b[1;32m--> 359\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    360\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX has \u001b[39m\u001b[39m{\u001b[39;00mn_features\u001b[39m}\u001b[39;00m\u001b[39m features, but \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    361\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mis expecting \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_features_in_\u001b[39m}\u001b[39;00m\u001b[39m features as input.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    362\u001b[0m     )\n",
+            "\u001b[1;31mValueError\u001b[0m: X has 493 features, but RandomForestClassifier is expecting 474 features as input."
           ]
         }
       ],
